Fix swagger errors
