# lib/tb_web/controllers/post_controller.ex
@@ -8,7 +8,8 @@ defmodule TBWeb.PostController do
 
   def swagger_definitions do
     %{
-      User: swagger_schema do
+      User:
+        swagger_schema do
           title("User")
           description("A user of the application")
 
@@ -33,26 +34,57 @@ defmodule TBWeb.PostController do
             address: "742 Evergreen Terrace"
           })
         end,
-      Users: swagger_schema do
+      Users:
+        swagger_schema do
           title("Users")
           description("A collection of Users")
           type(:array)
           items(Schema.ref(:User))
+        end,
+      UserResponse:
+        swagger_schema do
+          title("UserResponse")
+          description("Response schema for single user")
+          property(:data, Schema.ref(:User), "The user details")
+        end,
+      UsersResponse:
+        swagger_schema do
+          title("UsersReponse")
+          description("Response schema for multiple users")
+          property(:data, Schema.array(:User), "The users details")
         end
     }
   end
 
   swagger_path(:index) do
-    get "/api/users"
-    summary "List Users"
-    description "List all users in the database"
-    produces "application/json"
-    response 200, "OK", Schema.ref(:UsersResponse), example: %{
-      data: [
-        %{id: 1, name: "Joe", email: "Joe6@mail.com", inserted_at: "2017-02-08T12:34:55Z", updated_at: "2017-02-12T13:45:23Z"},
-        %{id: 2, name: "Jack", email: "Jack7@mail.com", inserted_at: "2017-02-04T11:24:45Z", updated_at: "2017-02-15T23:15:43Z"}
-      ]
-    }
+    get("/api/users")
+    summary("List Users")
+    description("List all users in the database")
+    produces("application/json")
+
+    response(
+      200,
+      "OK",
+      Schema.ref(:UsersResponse),
+      example: %{
+        data: [
+          %{
+            id: 1,
+            name: "Joe",
+            email: "Joe6@mail.com",
+            inserted_at: "2017-02-08T12:34:55Z",
+            updated_at: "2017-02-12T13:45:23Z"
+          },
+          %{
+            id: 2,
+            name: "Jack",
+            email: "Jack7@mail.com",
+            inserted_at: "2017-02-04T11:24:45Z",
+            updated_at: "2017-02-15T23:15:43Z"
+          }
+        ]
+      }
+    )
   end
 
   # action_fallback TBWeb.FallbackController
